--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
 <head>
   <title>Letmeask</title>
   <meta charset="utf-8" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta name="theme-color" content="#835AFD" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap"
+    rel="stylesheet">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="description" content="Let me ask! App to create and answer questions live on youtube videos." />
