--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta name="description" content="Let me ask! App to create and answer questions live on youtube videos." />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="description" content="Let me ask! App para criar e esclarecer dúvidas em tempo real." />
 </head>
 
 <body>
